* luci/themes:	fix vertical alignment of help icons

--- a/themes/openwrt.org/htdocs/luci-static/openwrt.org/cascade.css
+++ b/themes/openwrt.org/htdocs/luci-static/openwrt.org/cascade.css
@@ -419,6 +419,10 @@ td.cbi-section-table-optionals {
 	padding-top: 1em;
 }
 
+.cbi-value-helpicon img {
+	vertical-align: bottom;
+}
+
 div.cbi-error {
 	font-size: 95%;
 	font-weight: bold;
